gcc/testsuite/gdc.test/compilable/imports/test59b.d
module imports.test59b;

alias int HRESULT;
