gcc/testsuite/gdc.test/fail_compilation/imports/test21651b.d
module imports.test21651b;

alias T = int;
